Impact, 12in23, track first pass

--- a/app/css/components/header-with-bg.css
+++ b/app/css/components/header-with-bg.css
@@ -1,18 +1,26 @@
-.c-header-with-bg {
-    background: linear-gradient(
-            180deg,
-            rgba(251, 251, 255, 0) 79.36%,
-            #f4f4fd 100%
-        ),
-        linear-gradient(
-            180deg,
-            #fafaff 0%,
-            rgba(250, 250, 255, 0.677852) 24.48%,
-            rgba(250, 250, 255, 0) 77.6%,
-            #fafaff 100%
-        ),
-        url("bg-tracks-header@2x.jpg"), #fafaff;
+.theme-light {
+    .c-header-with-bg {
+        background: linear-gradient(
+                180deg,
+                rgba(251, 251, 255, 0) 79.36%,
+                #f4f4fd 100%
+            ),
+            linear-gradient(
+                180deg,
+                #fafaff 0%,
+                rgba(250, 250, 255, 0.677852) 24.48%,
+                rgba(250, 250, 255, 0) 77.6%,
+                #fafaff 100%
+            ),
+            url("bg-tracks-header@2x.jpg"), #fafaff;
 
-    background-size: 100%;
-    background-position: -190px;
+        background-size: 100%;
+        background-position: -190px;
+    }
+}
+
+.theme-dark {
+    .c-header-with-bg {
+        background: #191525;
+    }
 }
