--- a/app/css/pages/impact.css
+++ b/app/css/pages/impact.css
@@ -20,13 +20,8 @@
 }
 
 #impact-page {
-    header {
-        width: 100%;
-        height: 501px;
-        left: 0px;
-        top: 64px;
-
-        background: linear-gradient(
+    .theme-light {
+        --headerBackground: linear-gradient(
                 180deg,
                 rgba(251, 251, 255, 0) 79.36%,
                 #f4f4fd 100%
@@ -39,6 +34,18 @@
                 #fafaff 100%
             ),
             url("bg-tracks-header@2x.jpg"), #fafaff;
+    }
+
+    .theme-dark {
+        --headerBackground: #191525;
+    }
+    header {
+        width: 100%;
+        height: 501px;
+        left: 0px;
+        top: 64px;
+
+        background: var(--headerBackground);
         background-size: 100%;
     }
     .map-point {
