--- a/app/css/pages/track-about.css
+++ b/app/css/pages/track-about.css
@@ -98,7 +98,8 @@
                                     content: "";
                                     width: 100%;
                                     bottom: 0;
-                                    box-shadow: 0px 0px 25px 15px white;
+                                    box-shadow: 0px 0px 25px 15px
+                                        var(--backgroundColorA);
                                 }
                             }
                             & button:after {
