--- a/app/css/pages/donate.css
+++ b/app/css/pages/donate.css
@@ -32,22 +32,27 @@
         @apply flex flex-col;
         @apply lg:flex lg:flex-row-reverse;
 
-        /* @screen lg { */
-        /*     grid-template: */
-        /*         "video form" auto */
-        /*         "info form" auto / auto auto; */
+        @screen lg {
+            /*     grid-template: */
+            /*         "video form" auto */
+            /*         "info form" auto / auto auto; */
 
-        /*     & section.video-section { */
-        /*         grid-area: video; */
-        /*     } */
-        /*     & section.info-section { */
-        /*         grid-area: info; */
-        /*     } */
-        /*     & section.form-section { */
-        /*         grid-area: form; */
-        /*         @apply pl-48; */
-        /*     } */
-        /* } */
+            /*     & section.video-section { */
+            /*         grid-area: video; */
+            /*     } */
+            /*     & section.info-section { */
+            /*         grid-area: info; */
+            /*     } */
+            /*     & section.form-section { */
+            /*         grid-area: form; */
+            /*         @apply pl-48; */
+            /*     } */
+            /* } */
+            & section.form-section {
+                /*grid-area: form;*/
+                @apply pl-48;
+            }
+        }
     }
     & .c-progress {
         @apply relative;
@@ -128,6 +133,7 @@
         @screen lg {
             width: 570px;
             margin-top: -138px;
+            min-height: 400px;
         }
     }
     & .c-donations-form {
