Add prefer-color-scheme default

--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -338,3 +338,10 @@
 
     @apply text-textColor5 bg-backgroundColorB;
 }
+
+@media (prefers-color-scheme: dark) {
+    body.theme-unset {
+        background: red;
+        @reuse .theme-dark;
+    }
+}
