--- a/app/views/settings/donations.html.haml
+++ b/app/views/settings/donations.html.haml
@@ -19,7 +19,7 @@
                 to help everyone get better at programming.
               = link_to "Find out more", donate_path, class: "btn-primary btn-s"
 
-        - if current_user.total_donated_in_cents.present?
+        - if current_user.total_donated_in_cents.positive?
           - dollars, cents = current_user.total_donated_in_dollars.to_s.split('.')
           .summary-box.flex.flex-col.lg:flex-row.items-center
             .values.flex.items-center
@@ -55,3 +55,13 @@
                     = graphical_icon "download"
                     %span View Receipt
 
+
+        - if current_user.total_donated_in_cents.present?
+          .summary-box
+            %h3.text-h5.mb-4 Your donations will appear here
+            %p.text-p-base.mb-4
+              Once you've donated, you'll be able to see a history of all donations here.
+            %p.text-p-base
+              If you've donated to Exercism, but do not see your donations here or have not been awarded the Supporters badge, please email
+              = link_to "Loretta", "mailto:loretta@exercism.org"
+              and she'll sort it for you.
