--- a/app/views/tracks/about/_concepts.html.haml
+++ b/app/views/tracks/about/_concepts.html.haml
@@ -4,7 +4,7 @@
   .lg-container.container
     .section-header
       = graphical_icon "concepts", hex: true, css_class: "header-icon"
-      %h2.text-center A taste of the concepts you’ll cover
+      %h2.text-center A taste of the concepts you&apos;ll cover
       %hr.c-divider
 
     = image_tag "screenshots/concept-map.png", role: :presentation, class: "screenshot", width: 2880, height: 1434
