Add prefer-color-scheme default (#3477)
* Add prefer-color-scheme default

* Add another postcss plugin

---------

Co-authored-by: dem4ron <demaaron88@gmail.com>

--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -338,3 +338,15 @@
 
     @apply text-textColor5 bg-backgroundColorB;
 }
+
+@media (prefers-color-scheme: dark) {
+    .theme-unset {
+        @inline .theme-dark;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .theme-unset {
+        @inline .theme-light;
+    }
+}
