Louis now email

--- a/app/views/mailers/mailshots_mailer/now_louis_pilfold.text.erb
+++ b/app/views/mailers/mailshots_mailer/now_louis_pilfold.text.erb
@@ -1,7 +1,7 @@
 Hi <%= @user.handle %>,
 
-Our interview and Ask me Anything (AMA) with José Valim, the creator of Elixir, is starting now! We'll be exploring Elixir - its past, present and future - and functional programming. At the end I'll be putting your questions to José! It's totally free. You can watch it on YouTube or Twitch:
-- YouTube: https://www.youtube.com/watch?v=LknqlTouTKg
+Our interview and Ask me Anything (AMA) with Louis Pilfold, the creator of Gleam, is starting now! We'll be exploring Gleam - why he created it, the decision's he made, bulding a language community, and the future of the language. At the end I'll be putting your questions to Louis! It's totally free:
+- YouTube: https://www.youtube.com/watch?v=IlPOUuIZnec
 - Twitch: https://twitch.tv/exercismlive
 
 I hope you enjoy the session!
