--- a/app/views/mailers/mailshots_mailer/now_louis_pilfold.html.erb
+++ b/app/views/mailers/mailshots_mailer/now_louis_pilfold.html.erb
@@ -508,17 +508,17 @@ div.preheader {
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 16px;margin-bottom: 0;">
                     Our interview and Ask me Anything (AMA) with 
-                    <strong style="font-weight:600">José Valim, the creator of Elixir</strong>, is starting now! 
-                    We'll be exploring Elixir - its past, present and future - and functional programming. At the end I'll be putting your questions to José!
+                    <strong style="font-weight:600">Louis Pilfold, the creator of Gleam</strong>, is starting now! 
+                    We'll be exploring Gleam - why he created it, the decision's he made, bulding a language community, and the future of the language. At the end I'll be putting your questions to Louis!
                     It's totally free. You can watch it on
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=LknqlTouTKg"><span style="color:#2e57e8">YouTube</span></a>
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=IlPOUuIZnec"><span style="color:#2e57e8">YouTube</span></a>
                     or
                     <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://twitch.tv/exercismlive"><span style="color:#2e57e8">Twitch</span></a>.
                   </p>
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
                     <a href="https://www.youtube.com/watch?v=LknqlTouTKg" style="display:block; box-shadow: 0px 2px 4px #0F0923">
-                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-jose-interview-preview.jpg" style="width:100%; display:block"/>
+                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-louis-interview-preview.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
