Add more filters, adjust colours on track show page, fix missing dark themes, setup media query for dark theme, fix logo colour, add unset colors from figma

--- a/app/css/components/iteration-summary.css
+++ b/app/css/components/iteration-summary.css
@@ -41,6 +41,7 @@
         height: 24px;
         width: 24px;
         @apply text-textColor5 mr-16;
+        filter: var(--textColor2-filter);
     }
     & > .--info {
         @apply flex-grow;
