--- a/app/views/user_onboarding/show.html.haml
+++ b/app/views/user_onboarding/show.html.haml
@@ -13,7 +13,7 @@
         .content
           %h1 Just before you get started... 📝
           %p
-            We’re so excited you’re here and hope that Exercism will be a valuable and fun experience for you.
+            We&apos;re so excited you&apos;re here and hope that Exercism will be a valuable and fun experience for you.
             %strong We need to get a couple of quick legal bits out of the way to ensure you get the experience you expect, and to protect our community.
 
         = graphical_icon "laptop-woman-1", category: 'graphics'
