--- a/app/css/pages/dashboard.css
+++ b/app/css/pages/dashboard.css
@@ -8,8 +8,32 @@
     );
 }
 .theme-dark #page-dashboard {
-    background: linear-gradient(180deg, #000 0%, rgba(#282339, 0) 220px);
+    background-image: linear-gradient(
+        180deg,
+        #000 0%,
+        rgba(40, 35, 57, 0) 220px
+    );
 }
+@media (prefers-color-scheme: light) {
+    .theme-unset #page-dashboard {
+        background-image: linear-gradient(
+            180deg,
+            #e1ebff 70px,
+            rgba(225, 235, 255, 0) 290px
+        ) !important;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .theme-unset #page-dashboard {
+        background-image: linear-gradient(
+            180deg,
+            #000 0%,
+            rgba(40, 35, 57, 0) 220px
+        ) !important;
+    }
+}
+
 #page-dashboard {
     article {
         @apply pt-32;
@@ -77,7 +101,7 @@
         & .c-icon {
             width: 64px;
             height: 64px;
-
+            filter: var(--white-filter-when-dark);
             @apply flex-shrink-0 mr-32;
         }
 
