Update to after event copy

--- a/app/views/mailers/mailshots_mailer/now_louis_pilfold.html.erb
+++ b/app/views/mailers/mailshots_mailer/now_louis_pilfold.html.erb
@@ -507,23 +507,32 @@ div.preheader {
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 16px;margin-bottom: 0;">
-                    Our interview and Ask me Anything (AMA) with 
-                    <strong style="font-weight:600">Louis Pilfold, the creator of Gleam</strong>, is starting now! 
-                    We'll be exploring Gleam - why he created it, the decision's he made, bulding a language community, and the future of the language. At the end I'll be putting your questions to Louis!
-                    It's totally free. You can watch it on
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=IlPOUuIZnec"><span style="color:#2e57e8">YouTube</span></a>
-                    or
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://twitch.tv/exercismlive"><span style="color:#2e57e8">Twitch</span></a>.
+                    Yesterday, I had a great chat with
+                    <strong style="font-weight:600">Louis Pilfold, the creator of Gleam</strong>!
+                    We covered loads of ground, exploring why Louis created Gleam (did the world really need another programming language?), his philosophy in creating the language, his experience in bulding a language community, and the future of the language as it approaches its 1.0 release.
+                    It was a really insightful interview.
+                  </p>
+                  <p style="margin-top: 16px;margin-bottom: 0;">
+                    If you joined us for the session, thanks for coming along! 
+                    If you missed it, you can watch it back on our YouTube channel 👇
                   </p>
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
                     <a href="https://www.youtube.com/watch?v=LknqlTouTKg" style="display:block; box-shadow: 0px 2px 4px #0F0923">
-                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-louis-interview-preview.jpg" style="width:100%; display:block"/>
+                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-louis-interview-with-play-button.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    I hope you enjoy the session!
+                    We've got lots more interviews coming up for Mechanical March and the rest of #12in23. You can subscribe on
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=LknqlTouTKg"><span style="color:#2e57e8">YouTube</span></a>
+                    and
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://twitch.tv/exercismlive"><span style="color:#2e57e8">Twitch</span></a>.
+                    to make sure you don't miss anything.
+                  </p>
+
+                  <p style="margin-top: 16px;margin-bottom: 0;">
+                    Have a great day!
                   </p>
 
                   <p style="margin-top: 8px;margin-bottom: 20px;">
