Add correct link

--- a/app/views/mailers/mailshots_mailer/now_louis_pilfold.html.erb
+++ b/app/views/mailers/mailshots_mailer/now_louis_pilfold.html.erb
@@ -518,14 +518,14 @@ div.preheader {
                   </p>
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
-                    <a href="https://www.youtube.com/watch?v=LknqlTouTKg" style="display:block; box-shadow: 0px 2px 4px #0F0923">
+                    <a href="https://www.youtube.com/watch?v=G7vqoR431Zo" style="display:block; box-shadow: 0px 2px 4px #0F0923">
                       <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-louis-interview-with-play-button.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     We've got lots more interviews coming up for Mechanical March and the rest of #12in23. You can subscribe on
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=LknqlTouTKg"><span style="color:#2e57e8">YouTube</span></a>
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/@Exercism_org"><span style="color:#2e57e8">YouTube</span></a>
                     and
                     <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://twitch.tv/exercismlive"><span style="color:#2e57e8">Twitch</span></a>.
                     to make sure you don't miss anything.
