--- a/app/views/mailers/mailshots_mailer/now_louis_pilfold.text.erb
+++ b/app/views/mailers/mailshots_mailer/now_louis_pilfold.text.erb
@@ -1,10 +1,14 @@
 Hi <%= @user.handle %>,
 
-Our interview and Ask me Anything (AMA) with Louis Pilfold, the creator of Gleam, is starting now! We'll be exploring Gleam - why he created it, the decision's he made, bulding a language community, and the future of the language. At the end I'll be putting your questions to Louis! It's totally free:
-- YouTube: https://www.youtube.com/watch?v=IlPOUuIZnec
+Yesterday, I had a great chat with Louis Pilfold, the creator of Gleam! We covered loads of ground, exploring why Louis created Gleam (did the world really need another programming language?), his philosophy in creating the language, his experience in bulding a language community, and the future of the language as it approaches its 1.0 release. It was a really insightful interview.
+If you joined us for the session, thanks for coming along! If you missed it, you can watch it back on our YouTube channel.
+- Watch it back: YouTube: https://www.youtube.com/watch?v=G7vqoR431Zo
+
+We've got lots more interviews coming up for Mechanical March and the rest of #12in23. You can subscribe on YouTube and Twitch. to make sure you don't miss anything.
+- YouTube: https://www.youtube.com/@Exercism_org
 - Twitch: https://twitch.tv/exercismlive
 
-I hope you enjoy the session!
+Have a great day,
 
 Jeremy Walker
 Exercism Co-founder
