Add track overview details, variables

--- a/app/css/components/iteration-processing-status.css
+++ b/app/css/components/iteration-processing-status.css
@@ -18,6 +18,7 @@
     &.--processing {
         @apply text-orange;
         & .c-icon {
+            filter: var(--processing-orange-filter);
             animation: spin 3s linear infinite;
         }
     }
