Fix HLJS theme-unset issue, add variables

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -231,5 +231,6 @@
 @import "./pages/challenges/external";
 @import "./pages/challenges/12in23";
 
-@import "./highlighters/highlightjs-light";
-@import "./highlighters/highlightjs-dark";
+/* @import "./highlighters/highlightjs-light";
+@import "./highlighters/highlightjs-dark"; */
+@import "./highlighters/highlightjs-colors";
